--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "nodemailer": "^6.9.13",
-        "openai": "^6.15.0"
+        "openai": "^6.15.0",
+        "razorpay": "^2.9.6"
     },
     "keywords": [],
     "author": "",
